sass/screen.scss
/* ... */
@mixin block-button-dark { @include block-button-base(#524d46, #2e2b27, #302c29, #ec4622); }
@mixin block-button-dark-reverse { @include block-button-base(#2e2b27, #524d46, #302c29, #ec4622); }
@mixin block-button-light { @include block-button-base(#ece8d7, #dad4b3, #dad4b3, #ec4622); }

$font-sans: BellGothicBT-Roman, Arial, sans-serif;
$font-sans-new: Lato, Arial, sans-serif;
$font-serif: Georgia, serif;

@mixin article-info-fields {
	float: right;
	clear: right;
	padding-left: 10px;
	width: 260px;
	padding-bottom: 10px;
	border-bottom: 1px solid #443f39;
	margin-bottom: 10px;
	a { text-decoration: none; &:hover { text-decoration: underline; } }
}

/* Button Dark: H33 S7 L30 */
.btn-dark {
  font-family: Lato;
  background-color: hsl(33, 7%, 20%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6d665e", endColorstr="#36332f");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#6d665e), to(#36332f));
  background-image: -moz-linear-gradient(top, #6d665e, #36332f);
  background-image: -ms-linear-gradient(top, #6d665e, #36332f);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6d665e), color-stop(100%, #36332f));
  background-image: -webkit-linear-gradient(top, #6d665e, #36332f);
  background-image: -o-linear-gradient(top, #6d665e, #36332f);
  background-image: linear-gradient(#6d665e, #36332f);
  border-color: #36332f #36332f hsl(33, 7%, 15%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
  -webkit-font-smoothing: antialiased;
}

/* HTML */

body {
  margin: 0;
	font-family: $font-serif;
	font-size: 12px;
	line-height: 14px;
	background-color: #211C1A;
	color: #f4f3e9;
	@media only screen and (max-width:480px) {
		padding-top: 50px;
	}
	@media only screen and (min-width:481px) and (max-width:768px) { min-width: 768px; }
	@media only screen and (min-width:769px) { min-width: 900px; }
	.stipple-dottable-wrapper .stipple-call-to-action { display: none; }
}
a {
	color: #EC4622;
	text-decoration: none;
	&:hover {
		color: #9A0E0F;
		text-decoration: underline;
	}
}
h1, h2, h3, h4, h5, h6 {
	font-family: $font-sans-new;
	font-size: 2.25em;
	line-height: 1em;
	text-transform: uppercase;
	font-weight: normal;
}
h2 { font-size: 1.5em; }
h3 { font-size: 1.125em; }
h4 { font-size: 0.75em; }
h5, h6 { font-size: 0.75em; }

/* FORM ELEMENTS */

input {
	&.form-text {
		background: #49443e;
		@include single-box-shadow(#2f2b28, 0, 0, 5px, 0, inset);
		border: 0;
		font-family: $font-serif;
		color: #f7f4eb;
		font-size: 16px;
		padding-left: 6px;
		padding-right: 6px;
		height: 26px;
		&.form-autocomplete {
			background-image: url(../images/spinner-off.gif) !important;
			background-position: 99% center !important;
		}
		&.throbbing {
			background-image: url(../images/spinner.gif) !important;
		}
		&:focus { background: #49443e; border: 0; }
	}
}
textarea {
	border: 0;
	background: #49443e;
	@include single-box-shadow(#2f2b28, 0, 0, 5px, 0, inset);
	padding: 10px;
	font-family: $font-serif;
	color: #f7f4eb;
	font-size: 14px;
	line-height: 20px;
	&:focus { background: #49443e; border: 0; }
}
.form-submit, select, #edit-cancel {
	-webkit-border-radius: 0;
	@include block-button-dark;
	padding: 6px 12px 7px 12px;
	height: 30px;
	font-size: 14px;
	color: #e3dfc5;
	font-family: $font-serif;
	font-style: italic;
	font-weight: normal;
	border: 0 !important;
	border-right: 1px solid #211e1b !important;
	border-bottom: 1px solid #211e1b !important;
	position: relative;
}

/* GLOBALS */

.tabs,
#site-slogan { display: none; }
#messages-help-wrapper .block { margin: 0; }
#pagedimmer {
	position: fixed;
	width: 100%;
	height: 100%;
	background: black -webkit-gradient(radial, 50% 50%, 30, 50% 200, 650, from(#262626), to(black));
	background-image: -webkit-gradient(radial, 50% 50%, 30, 50% 200, 650, from(#262626), to(black));
	opacity: 0.8;
	z-index: 9;
	display: none;
}
#main-content {
  margin: 0;
	position: relative;
}
.title-with-buttons {
	float: left;
	margin-right: 20px;
	@media only screen and (max-width:320px) { padding-bottom: 10px; }
}
.block-button-ui {
	position: relative;
	top: 5px;
	@media only screen and (max-width:320px) { top: -10px; }
}
.feed-icon {
	position: absolute;
	top: 24px;
	right: 20px;
}
#content {
	clear: both;
}
.bookmarks_flag_link {
	background: #e3dfc5;
	height: 17px;
	min-width: 16px;
	padding: 4px;
	position: absolute;
	bottom: 0;
	right: 32px;
	margin: 3px;
	
	.flag-wrapper a {
		display: block;
		background: url(../images/bookmark.png) top left no-repeat;
		background-image: none, url(../images/bookmark.svg);
		width: 16px;
		height: 16px;
		text-indent: -9999px;
		white-space: nowrap;
		
		&.unflag-action  { background-position: top right; }
		.flag-throbber, .flag-message { display: none; color: transparent; }
	}
}
.not-logged-in .bookmarks_flag_link { display: none; }
.install_link {
	display: block;
	background: #e3dfc5 url(../images/installpart.png) center center no-repeat;
	background-image: none, url(../images/installpart.svg);
	width: 30px;
	height: 25px;
	text-indent: -9999px;
	position: absolute;
	margin: 3px;
	right: 57px;
	bottom: 0;
}
#beta-button {
	position: absolute;
	top: 35px;
	left: 186px;
	@media only screen and (max-width:480px) { top: 28px; left: 165px; line-height: 12px; }
	a {
		font-size: 12px;
		padding: 6px;
	}
}
a.block-button-ui {
	display: block-inline;
	@include block-button-dark;
	padding: 6px 12px 7px 12px;
	height: 16px;
	font-size: 14px;
	color: #e3dfc5;
	border-right: 1px solid #211e1b;
	border-bottom: 1px solid #211e1b;
	&:hover { text-decoration: none; }
	&.full {
		display: block;
		text-align: center;
		line-height: 15px;
		margin-bottom: 12px;
	}
}
/* ... */

